2012-12-12  Sergio Martin <sergio.martin@artica.es>

	* include/functions_config.php: Added configuration
	parameters for the events replication

2012-12-12  Hirofumi Kosaka  <kosaka@rworks.jp>

	* godmode/agentes/module_manager_editor.php: Fixed a bug only
	for the Enterprise version.  When 'Remote Configuration' is
	enabled and you try to create new module, which name includes
	meta characters, you will get the error "The field name and
	name in module_name in data configuration are different."

	Merged from branch 4.x.

2012-12-11 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/ajax/agent.php
	include/functions_ui.php
	include/javascript/pandora.js
	godmode/alerts/alert_list.list.php
	godmode/alerts/alert_list.php
	godmode/alerts/alert_list.builder.php
	godmode/users/user_list.php
	godmode/users/profile_list.php
	godmode/users/configure_user.php
	godmode/users/configure_profile.php: Added user and alert editor
	in metaconsole.

2012-12-11  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_netflow.php: Added a new way of retrieving netflow
	  data using multiple calls to nfdump that vastly improves the
	  performance of netfow data charts.

	* operation/netflow/nf_live_view.php: Check that the nfdump binary
	  exists.

2012-12-11  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php
	include/functions.php
	include/functions_config.php
	godmode/setup/setup_visuals.php: Add interval values
	configuration into visual setup and limit the 
	advanced control of interval combos only for
	administrators

2012-12-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql, pandoradb.sql,
	pandoradb.postgreSQL.sql, pandoradb.oracle.sql: in the table
	"tlayout_data" added the column "id_metaconsole" for to show
	visualmaps in the metaconsole.
	
	* operation/visual_console/render_view.php,